k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: excelify
spec:
  selector:
    app: nextjs
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
